# skiing

./: CMakeLists.txt  README.md  main.c  skiing.c  skiing.h
tests/: CMakeLists.txt  check_skiing.c
